[metadata]
name = linkscrubber
summary = pinboard.in bookmark cleaner
description-file =
    README.rst
author = Doug Hellmann
author-email = doug@doughellmann.com
home-page = https://github.com/dhellmann/link_scrubber
classifier =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Environment :: Console

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    linkscrubber

[entry_points]
console_scripts =
    linkscrubber = linkscrubber.main:main

[nosetests]
where = tests
detailed-errors = true
